2005-07-22  Marco Baringer  <mb@bese.it>

	* swank-openmcl.lisp (frame-catch-tags): Remove some debugging
	forms which were "polluting" the repl buffer when viewing an sldb
	buffer.
	(function-source-location): Make :error messages have the proper
	form (exactly one string argument). This fix also removes the
	issues with sending unreadble lists (containing #<...> to emacs).

2005-07-14  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (find-external-format): Fix typo.

2005-07-06  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-send-sigint): Use the symbol SIGINT stead of the
	signal number.  Suggested by Joerg Hoehle.
	(slime-compile-file): XEmacs needs the buffer as argument to
	local-variable-p.  Reported by Andy Sloane.

2005-07-05  Helmut Eller  <heller@common-lisp.net>

	The file variable slime-coding can now be used to specify the
	coding system to use for C-c C-k.  E.g., if the file contains
	-*- slime-coding: utf-8-unix -*- Emacs will tell the Lisp side
	to call COMPILE-FILE with an external-format argument.
	
	* slime.el (slime-compile-file): Send the coding system if
	the buffer local variable `slime-coding' is bound.

	* swank-backend.lisp, swank-sbcl.lisp, swank-clisp.lisp,
	swank-lispworks.lisp, swank-cmucl, swank-allegro.lisp,
	swank-abcl.lisp, swank-corman.lisp 
	(swank-compile-file): New optional argument `external-format'.

	* swank-clisp.lisp (getpid): Undo the last change.

	* swank-corman.lisp (spawn, thread-alive-p): More thread tweaking.
	
2005-07-03  Joerg Hoehle <hoehle@users.sourceforge.net>

	* swank-clisp (describe-symbol-for-emacs): Report :setf and :type
	where appropriate.

2005-07-03  Helmut Eller  <heller@common-lisp.net>
	
	* slime.el (next-single-char-property-change)
	(previous-single-char-property-change) [xemacs]: Only define them
	if not present.
	(next-char-property-change, previous-char-property-change): Define
	if needed.

	* README: Show examples for the filenames instead of the general