@@ -3659,6 +3659,26 @@ See `methods-by-applicability'.")
   (declare (ignore inspector))
   (values "A number." `("Value: " ,(princ-to-string n))))
 
+(defun format-iso8601-time (time-value &optional include-timezone-p)
+    "Formats a universal time TIME-VALUE in ISO 8601 format, with
+    the time zone included if INCLUDE-TIMEZONE-P is non-NIL"    
+    ;; Taken from http://www.pvv.ntnu.no/~nsaa/ISO8601.html
+    ;; Thanks, Nikolai Sandved and Thomas Russ!
+    (flet ((format-iso8601-timezone (zone)
+             (if (zerop zone)
+                 "Z"
+                 (multiple-value-bind (h m) (truncate (abs zone) 1.0)
+                   ;; Tricky.  Sign of time zone is reversed in ISO 8601
+                   ;; relative to Common Lisp convention!
+                   (format nil "~:[+~;-~]~2,'0D:~2,'0D"
+                           (> zone 0) h (round m))))))
+    (multiple-value-bind (second minute hour day month year dow dst zone)
+      (decode-universal-time time-value)
+      (declare (ignore dow dst))
+      (format nil "~4,'0D-~2,'0D-~2,'0DT~2,'0D:~2,'0D:~2,'0D~:[~*~;~A~]"
+              year month day hour minute second
+              include-timezone-p (format-iso8601-timezone zone)))))
+
 (defmethod inspect-for-emacs ((i integer) inspector)
   (declare (ignore inspector))
   (values "A number."
@@ -3671,10 +3691,7 @@ See `methods-by-applicability'.")
            (label-value-line "Length" (integer-length i))
            (ignore-errors
              (list "As time: " 
-                   (multiple-value-bind (sec min hour date month year)
-                       (decode-universal-time i)
-                     (format nil "~4,'0D-~2,'0D-~2,'0DT~2,'0D:~2,'0D:~2,'0DZ"
-                             year month date hour min sec)))))))
+                   (format-iso8601-time i t))))))
 
 (defmethod inspect-for-emacs ((c complex) inspector)
   (declare (ignore inspector))
